Resolved Text Styles and spacing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   --primary-bg-color: #2babe3;
   --secondary-bg-color: #edf8fd;
   --primary-font-color: #040F14;
+  --fontName: "Montserrat", sans-serif;
+  --headerWeight: 600;
+  --subHeaderWeight: 500;
+  --paraWeight: 350;
 }
 
 * {
@@ -9,12 +13,27 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
   margin: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+h2 {
+  font-family: var(--fontName);
+  font-weight: var(--headerWeight);
+}
+
+h3 {
+  font-family: var(--fontName);
+  font-weight: var(--subHeaderWeight);
+}
+
+p {
+  font-family: var(--fontName);
+  font-weight: var(--paraWeight);
 }
 
 .header {
@@ -111,10 +130,11 @@ pfitemcard fullsize > 100% cover
 */
 
 .pfitemcard {
-  flex: auto;
+  
   background-color: lightgrey;
   overflow: hidden;
   line-height: 0;
+  
 }
 
 .pfitemcard.half {
@@ -152,16 +172,16 @@ pfitemcard fullsize > 100% cover
   aspect-ratio: 3 / 2;
   object-fit: cover;
   object-position: center center;
-  height: 100%;
+  min-height: 100%;
 }
 
 .cardCopy {
-  padding: 15px;
+  padding: 40px;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  gap: 15px;
-  justify-content: space-evenly;
+  gap: 25px;
+  justify-content: flex-start;
+  min-height: 100%;
 }
 
 .cardTitle {
@@ -173,5 +193,6 @@ pfitemcard fullsize > 100% cover
 }
 
 .cardText {
-  line-height: 1.0;
+  line-height: 1.2;
+  font-size: 1.0rem;
 }
